feat: add Google AdSense script to head section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     />
     <meta name="twitter:image" content="https://kit4.dev/banner.png?v=2" />
     <meta name="twitter:image:alt" content="Kit For Dev - Handy online tools for developers" />
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7694851811480424"
+         crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
