feat: add Google Analytics tracking code (G-SQ6189EV41)

--- a/index.html
+++ b/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kit For Dev - Handy online tools for developers</title>
-    <meta itemprop="name" content="Kit For Dev - Handy online tools for developers" />
-    <meta
-      name="description"
-      content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta
-      itemprop="description"
-      content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <link rel="author" href="humans.txt" />
-    <link rel="canonical" href="https://kit4.dev" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#18a058" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ6189EV41"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    <meta property="og:url" content="https://kit4.dev/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Kit For Dev - Handy online tools for developers" />
-    <meta
-      property="og:description"
-      content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta property="og:image" content="https://kit4.dev/banner.png?v=2" />
+    gtag('config', 'G-SQ6189EV41');
+  </script>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kit For Dev - Handy online tools for developers</title>
+  <meta itemprop="name" content="Kit For Dev - Handy online tools for developers" />
+  <meta name="description"
+    content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT." />
+  <meta itemprop="description"
+    content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT." />
+  <link rel="author" href="humans.txt" />
+  <link rel="canonical" href="https://kit4.dev" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@kit4dev" />
-    <meta name="twitter:creator" content="@cthmsst" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#18a058" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
 
-    <meta name="twitter:title" content="Kit For Dev - Handy online tools for developers" />
-    <meta
-      name="twitter:description"
-      content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta name="twitter:image" content="https://kit4.dev/banner.png?v=2" />
-    <meta name="twitter:image:alt" content="Kit For Dev - Handy online tools for developers" />
+  <meta property="og:url" content="https://kit4.dev/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Kit For Dev - Handy online tools for developers" />
+  <meta property="og:description"
+    content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT." />
+  <meta property="og:image" content="https://kit4.dev/banner.png?v=2" />
 
-    <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7694851811480424"
-         crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@kit4dev" />
+  <meta name="twitter:creator" content="@cthmsst" />
+
+  <meta name="twitter:title" content="Kit For Dev - Handy online tools for developers" />
+  <meta name="twitter:description"
+    content="Collection of handy online tools for developers, with great UX. Kit For Dev is a free and open-source collection of handy online tools for developers & people working in IT." />
+  <meta name="twitter:image" content="https://kit4.dev/banner.png?v=2" />
+  <meta name="twitter:image:alt" content="Kit For Dev - Handy online tools for developers" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7694851811480424"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
